QueueManager extends manager

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,7 +15,7 @@
 >
     <testsuites>
         <testsuite name="Laravel Test Suite">
-            <directory suffix="Test.php">./tests</directory>
+            <directory suffix="Test.php">./tests/Queue</directory>
         </testsuite>
     </testsuites>
     <filter>
